--- a/css.css
+++ b/css.css
@@ -1,4 +1,4 @@
-. {
+* {
     margin: 0;
     padding: 0;
 }
@@ -7,11 +7,20 @@ body {
     width: 100%;
     height: 100%;
     font-family: "Times New Roman", Times, serif;
+    background-image: url(image/Background.jpg);
+    background-attachment: fixed;
+    background-size: cover;
+}
+
+.container {
+    width: 1370px;
+    height: 100%;
+    margin: auto;
 }
 
 .left-header {
     width: 20%;
-    height: 257px;
+    height: 300px;
     float: left;
 }
 
@@ -21,19 +30,24 @@ body {
 }
 
 #logo {
-    width: 300px;
+    width: 100%;
+    height: 100%;
+}
+
+.right_header {
+    width: 80%;
+    height: 300px;
+    float: left;
+}
+
+.right_header .banner {
+    width: 100%;
     height: 300px;
 }
 
 #banner {
     width: 100%;
-    height: 300px;
-}
-
-.right_header {
-    width: 80%;
-    height: 257px;
-    float: left;
+    height: 100%;
 }
 
 .searchbtn {
@@ -41,12 +55,13 @@ body {
     height: 50px;
     padding-top: 40px;
     padding-left: 40px;
+    text-align: center;
 }
 
 .searchbtn input {
     width: 350px;
     height: 30px;
-    padding-left: 30px;
+    text-align: center;
 }
 
 .searchbtn button {
@@ -55,10 +70,11 @@ body {
     background-color: black;
     line-break: auto;
     position: absolute;
+    padding: 0.9px;
 }
 
 .header_user_info {
-    width: 50%;
+    width: 40%;
     height: 50px;
     display: inline-table;
     float: right;
@@ -83,10 +99,10 @@ body {
     display: block;
     color: brown;
     font-size: 20px;
+    float: right;
 }
 
 .header_user_info ul li a:hover {
-    background-color: black;
     color: white;
 }
 
@@ -97,8 +113,9 @@ body {
     float: left;
 }
 
-h4 {
+h2 {
     text-align: center;
+    color: brown;
 }
 
 .menu_block_left ul li {
@@ -113,11 +130,11 @@ h4 {
 .menu_block_left ul li a {
     text-decoration: none;
     font-size: 24px;
+    color: white;
 }
 
 .menu_block_left ul li a:hover {
     color: white;
-    background-color: black;
     font-size: 26px;
 }
 
@@ -125,18 +142,58 @@ h4 {
     display: none;
     width: 250px;
     height: auto;
-    left: 250px;
+    left: 180px;
     top: 0;
 }
 
 .menu_block_left ul li:hover>.sub_menu {
     display: block;
     position: absolute;
-    background-color: white;
+    background-color: black;
+    z-index: 1;
 }
 
 .right_column {
     width: 80%;
     height: 100%;
     float: left;
+}
+
+.right_column .slideshow_container img {
+    width: 100%;
+    height: 100%;
+}
+
+.slideshow_container {
+    max-width: 100%;
+    height: auto;
+    position: relative;
+    margin: auto;
+    text-align: center;
+}
+
+.slides {
+    display: none;
+    height: 100%;
+    width: 100%;
+}
+
+
+/* định dạng chấm chuyển slide*/
+
+.dot {
+    cursor: pointer;
+    height: 13px;
+    width: 13px;
+    margin: 0 2px;
+    background-color: rgb(224, 204, 204);
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+    text-align: center;
+}
+
+.active,
+.dot:hover {
+    background-color: red;
 }
