--- a/css.css
+++ b/css.css
@@ -11,16 +11,25 @@ body {
     background-attachment: fixed;
     background-size: cover;
 }
+.container {
+    width: 1370px;
+    height: 100%;
+    margin: auto;
+}
+.content{
+    max-width: 100%;
+    height: 550px;
+}
 
-@media screen and (min-width: 600px) {
+    
+    .header_container {
+        width: 100%;
+        height: 300px;
+    }
     .left-header {
         width: 20%;
         height: 300px;
         float: left;
-    }
-    .header_container {
-        width: 100%;
-        height: 300px;
     }
     #logo {
         width: 100%;
@@ -101,6 +110,40 @@ body {
         text-align: center;
         color: brown;
     }
+    .menu_block_left ul li {
+        list-style-type: none;
+        position: relative;
+        width: auto;
+        height: 50px;
+        line-height: 50px;
+        border-bottom: 1px solid;
+    }
+    
+    .menu_block_left ul li a {
+        text-decoration: none;
+        font-size: 24px;
+        color: white;
+    }
+    
+    .menu_block_left ul li a:hover {
+        color: white;
+        font-size: 26px;
+    }
+    
+    .menu_block_left ul li>.sub_menu {
+        display: none;
+        width: 250px;
+        height: auto;
+        left: 180px;
+        top: 0;
+    }
+    
+    .menu_block_left ul li:hover>.sub_menu {
+        display: block;
+        position: absolute;
+        background-color: black;
+        z-index: 1;
+    }
     .right_column {
         width: 80%;
         height: 100%;
@@ -138,47 +181,20 @@ body {
     .dot:hover {
         background-color: red;
     }
+.product{
+    max-width: 100%;
+    height: 1000px;
 }
+ .row1 , .row2{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    padding: 1em;
+    column-gap: 1em;
+    
+    
+    
+ }
+ img{
+     max-width: 100%;
+ }
 
-@media screen and (min-width: 1280px) {
-    .container {
-        width: 1370px;
-        height: 100%;
-        margin: auto;
-    }
-}
-
-.menu_block_left ul li {
-    list-style-type: none;
-    position: relative;
-    width: auto;
-    height: 50px;
-    line-height: 50px;
-    border-bottom: 1px solid;
-}
-
-.menu_block_left ul li a {
-    text-decoration: none;
-    font-size: 24px;
-    color: white;
-}
-
-.menu_block_left ul li a:hover {
-    color: white;
-    font-size: 26px;
-}
-
-.menu_block_left ul li>.sub_menu {
-    display: none;
-    width: 250px;
-    height: auto;
-    left: 180px;
-    top: 0;
-}
-
-.menu_block_left ul li:hover>.sub_menu {
-    display: block;
-    position: absolute;
-    background-color: black;
-    z-index: 1;
-}
