--- a/css.css
+++ b/css.css
@@ -11,190 +11,238 @@ body {
     background-attachment: fixed;
     background-size: cover;
 }
+
 .container {
     width: 1370px;
     height: 100%;
     margin: auto;
 }
-.content{
+
+.content {
     max-width: 100%;
     height: 550px;
 }
 
-    
-    .header_container {
-        width: 100%;
-        height: 300px;
-    }
-    .left-header {
-        width: 20%;
-        height: 300px;
-        float: left;
-    }
-    #logo {
-        width: 100%;
-        height: 100%;
-    }
-    .right_header {
-        width: 80%;
-        height: 300px;
-        float: left;
-    }
-    .right_header .banner {
-        width: 100%;
-        height: 300px;
-    }
-    #banner {
-        width: 100%;
-        height: 100%;
-    }
-    .searchbtn {
-        width: 50%;
-        height: 50px;
-        padding-top: 40px;
-        padding-left: 40px;
-        text-align: center;
-    }
-    .searchbtn input {
-        width: 350px;
-        height: 30px;
-        text-align: center;
-    }
-    .searchbtn button {
-        width: 60px;
-        color: wheat;
-        background-color: black;
-        line-break: auto;
-        position: absolute;
-        padding: 0.9px;
-    }
-    .header_user_info {
-        width: 40%;
-        height: 50px;
-        display: inline-table;
-        float: right;
-    }
-    .header_user_info ul {
-        list-style-type: none;
-        color: white;
-        text-align: center;
-    }
-    .header_user_info ul li {
-        display: inline-table;
-        list-style-type: none;
-        width: 120px;
-        height: 50px;
-        line-height: 50px;
-    }
-    .header_user_info ul li a {
-        text-decoration: none;
-        display: block;
-        color: brown;
-        font-size: 20px;
-        float: right;
-    }
-    .header_user_info ul li a:hover {
-        color: white;
-    }
-    .left_column {
-        width: 20%;
-        height: 100%;
-        font-size: larger;
-        float: left;
-    }
-    .left_column .menu_block_left .menu {
-        width: 20%;
-        height: 100%;
-    }
-    h2 {
-        text-align: center;
-        color: brown;
-    }
-    .menu_block_left ul li {
-        list-style-type: none;
-        position: relative;
-        width: auto;
-        height: 50px;
-        line-height: 50px;
-        border-bottom: 1px solid;
-    }
-    
-    .menu_block_left ul li a {
-        text-decoration: none;
-        font-size: 24px;
-        color: white;
-    }
-    
-    .menu_block_left ul li a:hover {
-        color: white;
-        font-size: 26px;
-    }
-    
-    .menu_block_left ul li>.sub_menu {
-        display: none;
-        width: 250px;
-        height: auto;
-        left: 180px;
-        top: 0;
-    }
-    
-    .menu_block_left ul li:hover>.sub_menu {
-        display: block;
-        position: absolute;
-        background-color: black;
-        z-index: 1;
-    }
-    .right_column {
-        width: 80%;
-        height: 100%;
-        float: left;
-    }
-    .right_column .slideshow_container img {
-        width: 100%;
-        height: 100%;
-    }
-    .slideshow_container {
-        max-width: 100%;
-        height: auto;
-        position: relative;
-        margin: auto;
-        text-align: center;
-    }
-    .slides {
-        display: none;
-        height: 100%;
-        width: 100%;
-    }
-    /* định dạng chấm chuyển slide*/
-    .dot {
-        cursor: pointer;
-        height: 13px;
-        width: 13px;
-        margin: 0 2px;
-        background-color: rgb(224, 204, 204);
-        border-radius: 50%;
-        display: inline-block;
-        transition: background-color 0.6s ease;
-        text-align: center;
-    }
-    .active,
-    .dot:hover {
-        background-color: red;
-    }
-.product{
+.header_container {
+    width: 100%;
+    height: 300px;
+}
+
+.left-header {
+    width: 20%;
+    height: 300px;
+    float: left;
+}
+
+#logo {
+    width: 100%;
+    height: 100%;
+}
+
+.right_header {
+    width: 80%;
+    height: 300px;
+    float: left;
+}
+
+.right_header .banner {
+    width: 100%;
+    height: 300px;
+}
+
+#banner {
+    width: 100%;
+    height: 100%;
+}
+
+.searchbtn {
+    width: 50%;
+    height: 50px;
+    padding-top: 40px;
+    padding-left: 40px;
+    text-align: center;
+}
+
+.searchbtn input {
+    width: 350px;
+    height: 30px;
+    text-align: center;
+}
+
+.searchbtn button {
+    width: 60px;
+    color: wheat;
+    background-color: black;
+    line-break: auto;
+    position: absolute;
+    padding: 0.9px;
+}
+
+.header_user_info {
+    width: 40%;
+    height: 50px;
+    display: inline-table;
+    float: right;
+}
+
+.header_user_info ul {
+    list-style-type: none;
+    color: white;
+    text-align: center;
+}
+
+.header_user_info ul li {
+    display: inline-table;
+    list-style-type: none;
+    width: 120px;
+    height: 50px;
+    line-height: 50px;
+}
+
+.header_user_info ul li a {
+    text-decoration: none;
+    display: block;
+    color: brown;
+    font-size: 20px;
+    float: right;
+}
+
+.header_user_info ul li a:hover {
+    color: white;
+}
+
+.left_column {
+    width: 20%;
+    height: 100%;
+    font-size: larger;
+    float: left;
+}
+
+.left_column .menu_block_left .menu {
+    width: 20%;
+    height: 100%;
+}
+
+h2 {
+    text-align: center;
+    color: brown;
+}
+
+.menu_block_left ul li {
+    list-style-type: none;
+    position: relative;
+    width: auto;
+    height: 50px;
+    line-height: 50px;
+    border-bottom: 1px solid;
+}
+
+.menu_block_left ul li a {
+    text-decoration: none;
+    font-size: 24px;
+    color: white;
+}
+
+.menu_block_left ul li a:hover {
+    color: white;
+    font-size: 26px;
+}
+
+.menu_block_left ul li>.sub_menu {
+    display: none;
+    width: 250px;
+    height: auto;
+    left: 180px;
+    top: 0;
+}
+
+.menu_block_left ul li:hover>.sub_menu {
+    display: block;
+    position: absolute;
+    background-color: black;
+    z-index: 1;
+}
+
+.right_column {
+    width: 80%;
+    height: 100%;
+    float: left;
+}
+
+.right_column .slideshow_container img {
+    width: 100%;
+    height: 100%;
+}
+
+.slideshow_container {
+    max-width: 100%;
+    height: auto;
+    position: relative;
+    margin: auto;
+    text-align: center;
+}
+
+.slides {
+    display: none;
+    height: 100%;
+    width: 100%;
+}
+
+
+/* định dạng chấm chuyển slide*/
+
+.dot {
+    cursor: pointer;
+    height: 13px;
+    width: 13px;
+    margin: 0 2px;
+    background-color: rgb(224, 204, 204);
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+    text-align: center;
+}
+
+.active,
+.dot:hover {
+    background-color: red;
+}
+
+.product {
     max-width: 100%;
     height: 1000px;
 }
- .row1 , .row2{
+
+.row1,
+.row2,
+.row3,
+.row4 {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     padding: 1em;
     column-gap: 1em;
-    
-    
-    
- }
- img{
-     max-width: 100%;
- }
+}
 
+img {
+    max-width: 100%;
+}
+
+.pagination {
+    text-align: center;
+    font-size: 40px;
+}
+
+.pagination ul li {
+    display: inline-table;
+    text-align: center;
+}
+
+.pagination ul li a {
+    text-decoration: none;
+    list-style-type: none;
+    color: silver;
+}
+
+.footer_container {
+    background-color: silver;
+}
