--- a/css.css
+++ b/css.css
@@ -64,9 +64,8 @@ body {
 }
 
 .searchbtn input {
-    width: 250px;
+    width: 350px;
     height: 30px;
-    padding-left: 100px;
     text-align: center;
 }
 
@@ -149,6 +148,9 @@ h2 {
     font-size: 26px;
 }
 
+
+/* tạo menu phụ */
+
 .menu_block_left ul li>.sub_menu {
     display: none;
     width: 250px;
@@ -227,38 +229,38 @@ h2 {
 img {
     max-width: 100%;
     height: auto;
-    transition: all ease-in-out
+    transition: all ease-in-out;
 }
-#item{
-    
-    position: relative;
-   overflow: hidden;
 
+#item {
+    position: relative;
+    overflow: hidden;
 }
+
 .txt {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.52);
     position: absolute;
-    bottom:50px;
+    bottom: 50px;
     text-align: center;
     color: white;
-    padding:10px;
+    padding: 10px;
     box-sizing: border-box;
     opacity: 0;
 }
+
 #item:hover div.txt {
     opacity: 1;
     transform: translateY(50px);
-    transition:ease-in-out 0.5s;
+    transition: ease-in-out 0.5s;
 }
- 
+
 #item:hover img {
     transform: scale(1.5);
     transition: all ease-in-out 0.5s;
- 
- 
 }
+
 .pagination {
     text-align: center;
     font-size: 25px;
@@ -341,10 +343,11 @@ span {
 .footer_container .footer_bottom ul li {
     list-style-type: none;
 }
-/* Medium devices (landscape tablets, 768px and up) */
-@media  (max-width: 768px) {
 
-  
+
+/* Medium devices (landscape tablets, 768px and up) */
+
+@media (max-width: 768px) {
     body {
         max-width: 100%;
         height: 100%;
@@ -353,104 +356,83 @@ span {
         background-attachment: fixed;
         background-size: cover;
     }
-    
     .container {
-       max-width:100%;
-       max-height: 80%;
+        max-width: 100%;
+        max-height: 80%;
         margin: auto;
     }
-    
     .content {
         max-width: 100%;
         height: 100%;
     }
-    
     .header_container {
-       max-width: 100%;
+        max-width: 100%;
         height: 10%;
     }
-    
     .left-header {
         width: 20%;
         height: 10%;
         float: left;
     }
-    
     #logo {
-       max-width: 100%;
-       height: 100%;
+        max-width: 100%;
+        height: 100%;
     }
-    
     .right_header {
         width: 80%;
         height: 10%;
         float: left;
     }
-    
     .right_header .banner {
-       max-width:100%;
-       height: 5%;
+        max-width: 100%;
+        height: 5%;
     }
-    
     #banner {
-       max-width: 100%;
+        max-width: 100%;
         height: 70%;
     }
-    
     .searchbtn {
         width: 5%;
         height: 10px;
         padding-left: 150px;
         text-align: center;
     }
-    
     .searchbtn input {
         max-width: 100%;
         height: 100%;
         text-align: center;
-        padding:0 0.5em 0.5em 10rem;
+        padding: 0 0.5em 0.5em 10rem;
         font-size: 0.5em;
-        
     }
-    
     .searchbtn button {
         width: 10%;
-        height:15px;
+        height: 15px;
         color: wheat;
         background-color: black;
         line-break: auto;
         position: absolute;
-        padding:0.1em 0.5em 0.5em 0.5em;
+        padding: 0.1em 0.5em 0.5em 0.5em;
         font-size: 0.5em;
         text-align: center;
         margin-left: 3rem;
     }
-   
-    
     .header_user_info ul {
-       display: none;
+        display: none;
     }
-    
-   
-    
-    
     .left_column {
-       max-width: 20%;
+        max-width: 20%;
         height: 100%;
         font-size: 0.5em;
         float: left;
     }
-    
     .left_column .menu_block_left .menu {
-       max-width: 20%;
+        max-width: 20%;
         height: 100%;
     }
-    
     h2 {
         text-align: center;
         color: brown;
     }
-    
     .menu_block_left ul li {
         list-style-type: none;
         position: relative;
@@ -459,18 +441,15 @@ span {
         line-height: 20px;
         border-bottom: 1px solid;
     }
-    
     .menu_block_left ul li a {
         text-decoration: none;
         font-size: 1.5em;
         color: white;
     }
-    
     .menu_block_left ul li a:hover {
         color: white;
         font-size: 1.7em;
     }
-    
     .menu_block_left ul li>.sub_menu {
         display: none;
         width: 150px;
@@ -478,25 +457,21 @@ span {
         left: 50px;
         top: 0;
     }
-    
     .menu_block_left ul li:hover>.sub_menu {
         display: block;
         position: absolute;
         background-color: black;
         z-index: 1;
     }
-    
     .right_column {
         width: 80%;
         height: 100%;
         float: left;
     }
-    
     .right_column .slideshow_container img {
-       max-width: 100%;
+        max-width: 100%;
         height: 100%;
     }
-    
     .slideshow_container {
         max-width: 100%;
         height: auto;
@@ -504,16 +479,12 @@ span {
         margin: auto;
         text-align: center;
     }
-    
     .slides {
         display: none;
         height: 100%;
         width: 100%;
     }
-    
-    
     /* định dạng chấm chuyển slide*/
-    
     .dot {
         cursor: pointer;
         height: 5px;
@@ -522,20 +493,16 @@ span {
         background-color: rgb(224, 204, 204);
         border-radius: 50%;
         display: inline-block;
-        
         text-align: center;
     }
-    
     .active,
     .dot:hover {
         background-color: red;
     }
-    
     .product {
         max-width: 100%;
         height: 100%;
     }
-    
     .row1,
     .row2,
     .row3,
@@ -545,75 +512,61 @@ span {
         padding: 1em;
         column-gap: 1em;
     }
-    
     img {
         max-width: 100%;
     }
-    
     .pagination {
         text-align: center;
         font-size: 0.5rem;
     }
-    
     .pagination ul li {
         display: inline-table;
         text-align: center;
     }
-    
     .pagination ul li a {
         text-decoration: none;
         list-style-type: none;
         color: silver;
     }
-    
     .footer_container {
-       max-width: 100%;
+        max-width: 100%;
     }
-    
     .footer_container .footer_top {
         width: 100%;
         height: 25%;
         font-size: 0.5rem;
     }
-    
     .footer_container .footer_top .footer_1 {
         color: white;
         float: left;
         width: 40%;
     }
-    
     .footer_container .footer_top .footer_1 input {
         padding: 0.1em;
         margin-top: 0.1rem;
         border-radius: 0.5rem;
         font-size: 0.5rem;
     }
-    
     .footer_container .footer_top .footer_2 {
         width: 60%;
         float: left;
     }
-    
     .footer_container .footer_top .footer_2 ul li {
         list-style-type: none;
         display: inline-table;
         padding: 0.3em;
     }
-    
     .footer_container .footer_top .footer_2 ul li #footer_2 {
         background-color: pink;
         padding: 0rem;
         border-radius: 0.5em;
-        
     }
-    
     .footer_container .footer_top .footer_2 ul li a {
         text-decoration: solid;
         color: red;
         font-size: 0.5rem;
         font-weight: bolder;
     }
-    
     span {
         font-style: italic;
         font-size: 0.5rem;
@@ -621,7 +574,6 @@ span {
         color: #fab1a0;
         text-align: center;
     }
-    
     .footer_container .footer_bottom {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
@@ -630,10 +582,7 @@ span {
         font-size: 0.5rem;
         color: #d63031;
     }
-    
     .footer_container .footer_bottom ul li {
         list-style-type: none;
     }
 }
-
-
